<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".activitys_javaclass.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:src="@drawable/maya_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo_maya"/>

    <LinearLayout
    android:id="@+id/cardLogin"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/imageView"
    android:layout_marginTop="60dp"
    android:elevation="6dp"
    android:background="@drawable/rounded">


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/e_mail"
    android:textColor="@color/grey"
    android:fontFamily="@font/roboto_medium"/>

<EditText
    android:id="@+id/editEmail"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:hint="@string/seu_email"
    android:inputType="textEmailAddress"
    android:autofillHints="emailAddress"
    android:textSize="15sp"
    android:fontFamily="@font/roboto_medium"
    android:background="@drawable/rounded"
    android:backgroundTint="@color/lightgrey"
    android:padding="10dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="16dp"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/senha"
    android:textColor="@color/grey"
    android:fontFamily="@font/roboto_medium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/preencher_senha"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_medium"
                android:background="@drawable/rounded"
                android:backgroundTint="@color/lightgrey"
                android:padding="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:backgroundTint="@color/lightblue"
            android:layout_marginTop="10dp"/>


        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esqueci_senha"
            android:textColor="@color/lightblue"
            android:fontFamily="@font/roboto_medium"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"/>

    </LinearLayout>

<TextView
    android:id="@+id/txtVersao"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/versão_app"
    android:textColor="@color/lightblue"
    android:fontFamily="@font/roboto_medium"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="20dp" />

</RelativeLayout>



