<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".activitys_javaclass.ForgotPasswordSequelActivity">

    <LinearLayout
        android:id="@+id/cardForgetPasswordSequel"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:elevation="6dp"
        android:background="@drawable/rounded">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esqueci_senha"
            android:textColor="@color/lightblue"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_medium"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insira_codigo"
            android:textColor="@color/grey"
            android:fontFamily="@font/roboto_medium"/>

        <EditText
            android:id="@+id/editCode"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:hint="@string/preencher_senha"
            android:inputType="number"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/lightgrey"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insira_uma_nova_senha"
            android:textColor="@color/grey"
            android:fontFamily="@font/roboto_medium"/>

        <EditText
            android:id="@+id/editNewPassword"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:hint="@string/preencher_senha"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/lightgrey"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirme_sua_senha"
            android:textColor="@color/grey"
            android:fontFamily="@font/roboto_medium"/>

        <EditText
            android:id="@+id/editConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:hint="@string/preencher_senha"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/lightgrey"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alterar_a_senha"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            app:backgroundTint="@color/lightblue" />

    </LinearLayout>

</RelativeLayout>



